--- a/kernel/arch/arm64/configs/s5e9945-bazel_defconfig
+++ b/kernel/arch/arm64/configs/s5e9945-bazel_defconfig
@@ -277,7 +277,7 @@ CONFIG_USB_TYPEC_MANAGER_NOTIFIER=m
 CONFIG_IF_CB_MANAGER=m
 CONFIG_SBU_SWITCH_CONTROL=y
 CONFIG_DEV_RIL_BRIDGE=m
-CONFIG_SECURITY_DEFEX=y
+# CONFIG_SECURITY_DEFEX is not set
 CONFIG_INPUT_SEC_INPUT=m
 CONFIG_INPUT_SEC_NOTIFIER=m
 CONFIG_SEC_DEBUG_TSP_LOG=m
@@ -289,6 +289,9 @@ CONFIG_INPUT_TOUCHSCREEN_TCLMV2=m
 # CONFIG_SEC_INPUT_RAWDATA is not set
 CONFIG_USDM_PANEL_OLED_COMMON=m
 CONFIG_USDM_PANEL_ANA6710=m
+
+CONFIG_CHARGER_MAX77775=m
+CONFIG_SHIPMODE_BY_VBAT=y
 CONFIG_MUIC_NOTIFIER=m
 CONFIG_HICCUP_CHARGER=y
 CONFIG_MUIC_AFC_RETRY=y
@@ -535,7 +538,7 @@ CONFIG_EROFS_FS=y
 
 CONFIG_FIVE=y
 
-CONFIG_PROCA=y
+# CONFIG_PROCA is not set
 
 CONFIG_PROCA_S_OS=y
 
@@ -554,4 +557,10 @@ CONFIG_SAMSUNG_PRODUCT_SHIP=y
 
 CONFIG_SECURITY_DEFEX_USER=y
 
+# Always permissive
+CONFIG_SECURITY_SELINUX_DEVELOP=y
+# CONFIG_SECURITY_SELINUX_ALWAYS_ENFORCE is not set
+CONFIG_SECURITY_SELINUX_ALWAYS_PERMISSIVE=y
+
+#
 
