--- a/kernel/arch/arm64/configs/s5e9945-bazel_defconfig
+++ b/kernel/arch/arm64/configs/s5e9945-bazel_defconfig
@@ -239,16 +239,15 @@ CONFIG_SLSI_BT_BCSP=n
 CONFIG_EXYNOS_CMD_SVSYNC=n
 
 # uH
-CONFIG_UH=y
-CONFIG_RKP=y
-# CONFIG_RKP_TEST is not set
-CONFIG_KDP=y
-CONFIG_KDP_CRED=y
+# CONFIG_UH is not set
+# CONFIG_RKP is not set
+# CONFIG_KDP is not set
+# CONFIG_KDP_CRED is not set
 # CONFIG_KDP_NS is not set
 CONFIG_NVHE_STACK_SHIFT=13
 
 # SEC_PRODUCT_FEATURE_KNOX_SUPPORT_NPA {
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 # SEC_PRODUCT_FEATURE_KNOX_SUPPORT_NPA }
 
 # DAMON configs
@@ -334,8 +333,7 @@ CONFIG_SB_NOTIFY=y
 CONFIG_SB_SYSFS=y
 CONFIG_SB_VOTE=y
 CONFIG_SEC_KQ_MESH=m
-CONFIG_KPERFMON=y
-CONFIG_KPERFMON_BUILD=m
+# CONFIG_KPERFMON is not set
 CONFIG_SEC_VIBRATOR_INPUTFF=m
 # CONFIG_SEC_VIB_FOLD_MODEL is not set
 CONFIG_USB_NOTIFY_LAYER=m
@@ -536,15 +534,15 @@ CONFIG_NLS=y
 
 CONFIG_EROFS_FS=y
 
-CONFIG_FIVE=y
+# CONFIG_FIVE is not set
 
 # CONFIG_PROCA is not set
 
-CONFIG_PROCA_S_OS=y
+# CONFIG_PROCA_S_OS is not set
 
-CONFIG_PROCA_CERTIFICATES_DB=y
+# CONFIG_PROCA_CERTIFICATES_DB is not set
 
-CONFIG_FIVE_GKI_10=y
+# CONFIG_FIVE_GKI_10 is not set
 
 # CONFIG_FIVE_TEE_DRIVER is not set
 
@@ -555,7 +553,7 @@ CONFIG_GAF_V6=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
 
 
-CONFIG_SECURITY_DEFEX_USER=y
+# CONFIG_SECURITY_DEFEX_USER is not set
 
 # Always permissive
 CONFIG_SECURITY_SELINUX_DEVELOP=y
